--- a/autonomous-game/index.html
+++ b/autonomous-game/index.html
@@ -35,13 +35,13 @@
       import init, { set_wasm } from "./dist/autonomous-game.js";
       async function impl_run() {
         let wbg = await init();
+        console.log(wasm_exports);
         miniquad_add_plugin({
           register_plugin: (a) => (a.wbg = wbg),
           on_init: () => set_wasm(wasm_exports),
           version: "0.0.1",
           name: "wbg",
         });
-
         load("./dist/autonomous-game_bg.wasm");
       }
 
