--- a/autonomous-game/index.html
+++ b/autonomous-game/index.html
@@ -4,13 +4,16 @@
     <meta charset="utf-8" />
     <title>Game with Position Logging</title>
     <style>
-      #position-display {
-        position: fixed;
+      #player-speed {
         top: 10px;
         left: 10px;
         background: rgba(255, 255, 255, 0.8);
         padding: 10px;
         font-family: monospace;
+      }
+
+      #set-player-speed {
+        left: 10px;
       }
 
       canvas {
@@ -25,33 +28,25 @@
         z-index: 0;
         outline: none;
       }
+
+      #player_speed {
+        top: 0px;
+      }
     </style>
   </head>
-  <body>
-    <div id="position-display">Position: waiting...</div>
-    <canvas id="glcanvas" tabindex="1"></canvas>
+  <body style="margin: 0; padding: 0; height: 100vh; width: 100vw">
+    <canvas id="glcanvas" tabindex="1" hidden></canvas>
     <script src="https://not-fl3.github.io/miniquad-samples/mq_js_bundle.js"></script>
-    <script type="module">
-      import init, { set_wasm } from "./dist/autonomous-game.js";
-      async function impl_run() {
-        let wbg = await init();
-        console.log(wasm_exports);
-        miniquad_add_plugin({
-          register_plugin: (a) => (a.wbg = wbg),
-          on_init: () => set_wasm(wasm_exports),
-          version: "0.0.1",
-          name: "wbg",
-        });
-        load("./dist/autonomous-game_bg.wasm");
-      }
-
-      window.run = function () {
-        document.getElementById("run-container").remove();
-        document.getElementById("glcanvas").removeAttribute("hidden");
-        document.getElementById("glcanvas").focus();
-        impl_run();
-      };
-    </script>
+    <script type="module" src="./wasm.js"></script>
+    <button id="player-speed" onclick="window.checkPlayerSpeed()">
+      check player speed
+    </button>
+    <button
+      id="set-player-speed"
+      onclick="window.setPlayerSpeed(Number(1000.0))"
+    >
+      set player speed
+    </button>
     <div
       id="run-container"
       style="
@@ -62,7 +57,7 @@
         flex-direction: column;
       "
     >
-      <button onclick="run()">Run Game</button>
+      <button onclick="window.run()">Run Game</button>
     </div>
   </body>
 </html>
