--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Autonomous World</title>
   </head>
   <body>
-    <canvas id="glcanvas" tabindex="1"></canvas>
+    <!-- <canvas id="glcanvas" tabindex="1"></canvas> -->
     <script type="module" src="/src/main.ts"></script>
     <script src="https://not-fl3.github.io/miniquad-samples/mq_js_bundle.js"></script>
     <script type="module">
@@ -27,7 +27,7 @@
         load("./wasm/autonomous-game_bg.wasm");
       }
 
-      impl_run();
+      // impl_run();
     </script>
     <!-- Your compiled WASM binary -->
   </body>
