--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,28 +7,31 @@
     <title>Autonomous World</title>
   </head>
   <body>
-    <!-- <canvas id="glcanvas" tabindex="1"></canvas> -->
-    <script type="module" src="/src/main.ts"></script>
+    <canvas id="glcanvas" tabindex="1"></canvas>
     <script src="https://not-fl3.github.io/miniquad-samples/mq_js_bundle.js"></script>
     <script type="module">
       import init, {
         set_wasm,
-        get_sui_address,
-        update_sui_address,
       } from "./wasm/autonomous-game.js";
-      async function impl_run() {
+
+      window.wasmInitialized = new Promise(async (resolve) => {
         let wbg = await init();
+        
         miniquad_add_plugin({
           register_plugin: (a) => (a.wbg = wbg),
-          on_init: () => set_wasm(wasm_exports),
+          on_init: () => {
+            set_wasm(wasm_exports);
+            // Resolve the promise when initialization is complete
+            resolve();
+          },
           version: "0.0.1",
           name: "wbg",
         });
+        
         load("./wasm/autonomous-game_bg.wasm");
-      }
+      });
 
-      // impl_run();
     </script>
-    <!-- Your compiled WASM binary -->
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
