--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,12 +9,12 @@
   <body>
     <canvas id="glcanvas" tabindex="1"></canvas>
     <!-- <script src="https://not-fl3.github.io/miniquad-samples/mq_js_bundle.js"></script> -->
-    <script src="./src/miniquad.js"></script>
+    <!-- <script src="./src/miniquad.js"></script> -->
     <script type="module">
       import init, {
         set_wasm,
       } from "./wasm/autonomous-game.js";
-      import{miniquad_add_plugin, load, wasm_exports} from "./miniquad.js"
+      import{miniquad_add_plugin, load, wasm_exports} from "./src/miniquad.js"
 
       window.wasmInitialized = new Promise(async (resolve) => {
         let wbg = await init();
